--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tailwind:init": "tailwindcss init -p",
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build && cp _redirects dist/_redirects"
   },
   "keywords": [],
   "author": "",
